# vzone

./: CAMERA_SHAKE_FIX.md  FOLLOW_CURSOR_FIX.md  IMPLEMENTATION_SUMMARY.md  INSTANT_CLICK_RESPONSE_FIX.md  MULTI_CLICK_TRIGGER_FIX.md  README_ZOOM_SYSTEM.md  STARTUP_PERFORMANCE_FIX.md  TARGETED_ZOOM_IMPLEMENTATION.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel-build.sh  vite.config.ts
recorder_core/: Cargo.toml
recorder_core/src/: lib.rs
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: BackgroundPicker.tsx  ControlsWindow.tsx  DraggableControls.tsx  RecorderUI.tsx  ZoomEditor.tsx
src/hooks/: useRecorder.ts
src/utils/: caretTracking.ts
src/workers/: timer.worker.ts
verification/: verify_background_picker.py
